@@ -1,5 +1,10 @@
+User Dennis Bendlin 
+Date: Thu Sep  5 12:02:29 CEST 2013
+
+    Add replay info.
+
 User johns
-Date:
+Date: Mon Aug 26 10:12:45 CEST 2013
 
     Allow filenames starting with '-'.
     Add dia show image/picture viewer.
